--- a/examples/free_flying_robot/CMakeLists.txt
+++ b/examples/free_flying_robot/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(joint_position_control_no_dynamics LANGUAGES CXX)
+project(free_flying_robot LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../dependencies.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/../../dependencies.cmake)
 
 
 add_executable(${CMAKE_PROJECT_NAME} main.cpp)
